# demuxai

./: .aiignore  .editorconfig  .gitignore  LICENSE  Makefile  README.md  config.spec.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  pytest.yml  release.yml
src/demuxai/: __init__.py  api.py  app.py  cli.py  context.py  exceptions.py  model.py  provider.py  registry.py  service.py  sse.py  strategy.py  timing.py  utils.py
src/demuxai/models/: fireworks.py  github.py  mistralai.py  ollama.py
src/demuxai/providers/: __init__.py  composite.py  consensus.py  fireworks.py  github.py  http.py  mistralai.py  ollama.py  ollama_cloud.py  registry.py  service.py  split.py
src/demuxai/settings/: base.py  composite.py  main.py  provider.py  utils.py
tests/: integration.py
tests/integration/: get_chat_completion.py  get_embeddings.py  get_fim_completion.py  get_models.py  helper.py
tests/test_demuxai/: test_context.py  test_model.py  test_sse.py  test_timing.py  test_utils.py
tests/test_demuxai/providers/: base.py  test_fireworks.py  test_github.py  test_mistralai.py  test_ollama.py
tests/test_demuxai/settings/: test_base.py  test_composite.py  test_main.py  test_provider.py
